// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserForm> should render user profile form 1`] = `
<UserForm
  isRegister={false}
  register={true}
  registerUser={[MockFunction]}
  updateUser={[MockFunction]}
  user={
    Object {
      "firstName": "John",
      "lastName": "Doe",
    }
  }
  validateUser={[MockFunction]}
  validationErrors={Array []}
>
  <Portal
    name="user.form.before"
    props={null}
  />
  <Portal
    name="user.form"
    props={null}
  >
    <Form
      onSubmit={[Function]}
    >
      <form
        action="#"
        onKeyPress={[Function]}
        onSubmit={[Function]}
      >
        <div
          className="css-1sbrycg"
        >
          <TextField
            className=""
            errorText=""
            label="user.firstName"
            leftElement={null}
            multiLine={false}
            name="firstName"
            onChange={[Function]}
            placeholder=""
            rightElement={null}
            type="text"
            value="John"
          >
            <FormElement
              className=""
              errorText=""
              hasPlaceholder={true}
              hasUnderline={true}
              hasValue={true}
              htmlFor="firstName"
              isFocused={false}
              label="user.firstName"
              placeholder=""
              translateErrorText={true}
            >
              <div
                className="css-1vjh8yv "
              >
                <Placeholder
                  placeholder=""
                  visible={false}
                >
                  <div
                    className="css-oc0mp css-1jyyyen"
                  >
                    <Translate
                      className=""
                      params={Object {}}
                      string=""
                    />
                  </div>
                </Placeholder>
                <Label
                  hasErrorMessage={false}
                  htmlFor="firstName"
                  isFloating={true}
                  isFocused={false}
                  label="user.firstName"
                >
                  <label
                    className="css-1nn9zl4 css-16msjt6 css-1fekhao"
                    htmlFor="firstName"
                  >
                    <Translate
                      className=""
                      params={Object {}}
                      string="user.firstName"
                    >
                      <span
                        className=""
                      >
                        user.firstName
                      </span>
                    </Translate>
                  </label>
                </Label>
                <Grid
                  className=""
                  component="ul"
                  wrap={false}
                >
                  <ul
                    className=" css-h7r55a"
                  >
                    <GridItem
                      className=""
                      component="li"
                      grow={1}
                      shrink={1}
                    >
                      <li
                        className=" css-1gs0ko2"
                      >
                        <Component
                          className="css-xtw4m3"
                          multiLine={false}
                          name="firstName"
                          onChange={[Function]}
                          type="text"
                          validateOnBlur={true}
                          value="John"
                        >
                          <SimpleInput
                            autoComplete={false}
                            autoCorrect={false}
                            className="css-xtw4m3"
                            disabled={false}
                            id={null}
                            isControlled={false}
                            multiLine={false}
                            name="firstName"
                            onChange={[Function]}
                            onFocusChange={[Function]}
                            onSanitize={[Function]}
                            onValidate={[Function]}
                            password={false}
                            setRef={[Function]}
                            type="text"
                            validateOnBlur={true}
                            value="John"
                          >
                            <input
                              autoComplete="off"
                              autoCorrect="off"
                              className="css-xtw4m3"
                              disabled={false}
                              id={null}
                              name="firstName"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              type="text"
                              value="John"
                            />
                          </SimpleInput>
                        </Component>
                      </li>
                    </GridItem>
                  </ul>
                </Grid>
                <Underline
                  hasErrorMessage={false}
                  isFocused={false}
                >
                  <div
                    className="css-ycal4l"
                  >
                    <div
                      className="css-1tpmuef"
                      style={
                        Object {
                          "borderBottomColor": undefined,
                          "transform": "scale3d(0,1,1)",
                        }
                      }
                    />
                  </div>
                </Underline>
                <ErrorText
                  className={null}
                  errorText=""
                  translate={true}
                >
                  <div
                    className="css-hyvrm8"
                  >
                    <Translate
                      className=""
                      params={Object {}}
                      string=""
                    />
                  </div>
                </ErrorText>
              </div>
            </FormElement>
          </TextField>
        </div>
        <div
          className="css-1sbrycg"
        >
          <TextField
            className=""
            errorText=""
            label="user.lastName"
            leftElement={null}
            multiLine={false}
            name="lastName"
            onChange={[Function]}
            placeholder=""
            rightElement={null}
            type="text"
            value="Doe"
          >
            <FormElement
              className=""
              errorText=""
              hasPlaceholder={true}
              hasUnderline={true}
              hasValue={true}
              htmlFor="lastName"
              isFocused={false}
              label="user.lastName"
              placeholder=""
              translateErrorText={true}
            >
              <div
                className="css-1vjh8yv "
              >
                <Placeholder
                  placeholder=""
                  visible={false}
                >
                  <div
                    className="css-oc0mp css-1jyyyen"
                  >
                    <Translate
                      className=""
                      params={Object {}}
                      string=""
                    />
                  </div>
                </Placeholder>
                <Label
                  hasErrorMessage={false}
                  htmlFor="lastName"
                  isFloating={true}
                  isFocused={false}
                  label="user.lastName"
                >
                  <label
                    className="css-1nn9zl4 css-16msjt6 css-1fekhao"
                    htmlFor="lastName"
                  >
                    <Translate
                      className=""
                      params={Object {}}
                      string="user.lastName"
                    >
                      <span
                        className=""
                      >
                        user.lastName
                      </span>
                    </Translate>
                  </label>
                </Label>
                <Grid
                  className=""
                  component="ul"
                  wrap={false}
                >
                  <ul
                    className=" css-h7r55a"
                  >
                    <GridItem
                      className=""
                      component="li"
                      grow={1}
                      shrink={1}
                    >
                      <li
                        className=" css-1gs0ko2"
                      >
                        <Component
                          className="css-xtw4m3"
                          multiLine={false}
                          name="lastName"
                          onChange={[Function]}
                          type="text"
                          validateOnBlur={true}
                          value="Doe"
                        >
                          <SimpleInput
                            autoComplete={false}
                            autoCorrect={false}
                            className="css-xtw4m3"
                            disabled={false}
                            id={null}
                            isControlled={false}
                            multiLine={false}
                            name="lastName"
                            onChange={[Function]}
                            onFocusChange={[Function]}
                            onSanitize={[Function]}
                            onValidate={[Function]}
                            password={false}
                            setRef={[Function]}
                            type="text"
                            validateOnBlur={true}
                            value="Doe"
                          >
                            <input
                              autoComplete="off"
                              autoCorrect="off"
                              className="css-xtw4m3"
                              disabled={false}
                              id={null}
                              name="lastName"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              type="text"
                              value="Doe"
                            />
                          </SimpleInput>
                        </Component>
                      </li>
                    </GridItem>
                  </ul>
                </Grid>
                <Underline
                  hasErrorMessage={false}
                  isFocused={false}
                >
                  <div
                    className="css-ycal4l"
                  >
                    <div
                      className="css-1tpmuef"
                      style={
                        Object {
                          "borderBottomColor": undefined,
                          "transform": "scale3d(0,1,1)",
                        }
                      }
                    />
                  </div>
                </Underline>
                <ErrorText
                  className={null}
                  errorText=""
                  translate={true}
                >
                  <div
                    className="css-hyvrm8"
                  >
                    <Translate
                      className=""
                      params={Object {}}
                      string=""
                    />
                  </div>
                </ErrorText>
              </div>
            </FormElement>
          </TextField>
        </div>
        <div
          className="css-1sbrycg"
        >
          <TextField
            className=""
            errorText=""
            label="user.mail"
            leftElement={null}
            multiLine={false}
            name="mail"
            onChange={[Function]}
            placeholder=""
            rightElement={null}
            type="text"
            value=""
          >
            <FormElement
              className=""
              errorText=""
              hasPlaceholder={true}
              hasUnderline={true}
              hasValue={false}
              htmlFor="mail"
              isFocused={false}
              label="user.mail"
              placeholder=""
              translateErrorText={true}
            >
              <div
                className="css-1vjh8yv "
              >
                <Placeholder
                  placeholder=""
                  visible={false}
                >
                  <div
                    className="css-oc0mp css-1jyyyen"
                  >
                    <Translate
                      className=""
                      params={Object {}}
                      string=""
                    />
                  </div>
                </Placeholder>
                <Label
                  hasErrorMessage={false}
                  htmlFor="mail"
                  isFloating={false}
                  isFocused={false}
                  label="user.mail"
                >
                  <label
                    className="css-1nn9zl4 css-1fekhao"
                    htmlFor="mail"
                  >
                    <Translate
                      className=""
                      params={Object {}}
                      string="user.mail"
                    >
                      <span
                        className=""
                      >
                        user.mail
                      </span>
                    </Translate>
                  </label>
                </Label>
                <Grid
                  className=""
                  component="ul"
                  wrap={false}
                >
                  <ul
                    className=" css-h7r55a"
                  >
                    <GridItem
                      className=""
                      component="li"
                      grow={1}
                      shrink={1}
                    >
                      <li
                        className=" css-1gs0ko2"
                      >
                        <Component
                          className="css-xtw4m3"
                          multiLine={false}
                          name="mail"
                          onChange={[Function]}
                          type="text"
                          validateOnBlur={true}
                          value=""
                        >
                          <SimpleInput
                            autoComplete={false}
                            autoCorrect={false}
                            className="css-xtw4m3"
                            disabled={false}
                            id={null}
                            isControlled={false}
                            multiLine={false}
                            name="mail"
                            onChange={[Function]}
                            onFocusChange={[Function]}
                            onSanitize={[Function]}
                            onValidate={[Function]}
                            password={false}
                            setRef={[Function]}
                            type="text"
                            validateOnBlur={true}
                            value=""
                          >
                            <input
                              autoComplete="off"
                              autoCorrect="off"
                              className="css-xtw4m3"
                              disabled={false}
                              id={null}
                              name="mail"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              type="text"
                              value=""
                            />
                          </SimpleInput>
                        </Component>
                      </li>
                    </GridItem>
                  </ul>
                </Grid>
                <Underline
                  hasErrorMessage={false}
                  isFocused={false}
                >
                  <div
                    className="css-ycal4l"
                  >
                    <div
                      className="css-1tpmuef"
                      style={
                        Object {
                          "borderBottomColor": undefined,
                          "transform": "scale3d(0,1,1)",
                        }
                      }
                    />
                  </div>
                </Underline>
                <ErrorText
                  className={null}
                  errorText=""
                  translate={true}
                >
                  <div
                    className="css-hyvrm8"
                  >
                    <Translate
                      className=""
                      params={Object {}}
                      string=""
                    />
                  </div>
                </ErrorText>
              </div>
            </FormElement>
          </TextField>
        </div>
        <div
          className="css-1sbrycg"
        >
          <TextField
            className=""
            errorText=""
            label="user.password"
            leftElement={null}
            multiLine={false}
            name="password"
            onChange={[Function]}
            placeholder=""
            rightElement={null}
            type="password"
            value=""
          >
            <FormElement
              className=""
              errorText=""
              hasPlaceholder={true}
              hasUnderline={true}
              hasValue={false}
              htmlFor="password"
              isFocused={false}
              label="user.password"
              placeholder=""
              translateErrorText={true}
            >
              <div
                className="css-1vjh8yv "
              >
                <Placeholder
                  placeholder=""
                  visible={false}
                >
                  <div
                    className="css-oc0mp css-1jyyyen"
                  >
                    <Translate
                      className=""
                      params={Object {}}
                      string=""
                    />
                  </div>
                </Placeholder>
                <Label
                  hasErrorMessage={false}
                  htmlFor="password"
                  isFloating={false}
                  isFocused={false}
                  label="user.password"
                >
                  <label
                    className="css-1nn9zl4 css-1fekhao"
                    htmlFor="password"
                  >
                    <Translate
                      className=""
                      params={Object {}}
                      string="user.password"
                    >
                      <span
                        className=""
                      >
                        user.password
                      </span>
                    </Translate>
                  </label>
                </Label>
                <Grid
                  className=""
                  component="ul"
                  wrap={false}
                >
                  <ul
                    className=" css-h7r55a"
                  >
                    <GridItem
                      className=""
                      component="li"
                      grow={1}
                      shrink={1}
                    >
                      <li
                        className=" css-1gs0ko2"
                      >
                        <Component
                          className="css-xtw4m3"
                          multiLine={false}
                          name="password"
                          onChange={[Function]}
                          type="password"
                          validateOnBlur={true}
                          value=""
                        >
                          <SimpleInput
                            autoComplete={false}
                            autoCorrect={false}
                            className="css-xtw4m3"
                            disabled={false}
                            id={null}
                            isControlled={false}
                            multiLine={false}
                            name="password"
                            onChange={[Function]}
                            onFocusChange={[Function]}
                            onSanitize={[Function]}
                            onValidate={[Function]}
                            password={false}
                            setRef={[Function]}
                            type="password"
                            validateOnBlur={true}
                            value=""
                          >
                            <input
                              autoComplete="off"
                              autoCorrect="off"
                              className="css-xtw4m3"
                              disabled={false}
                              id={null}
                              name="password"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              type="password"
                              value=""
                            />
                          </SimpleInput>
                        </Component>
                      </li>
                    </GridItem>
                  </ul>
                </Grid>
                <Underline
                  hasErrorMessage={false}
                  isFocused={false}
                >
                  <div
                    className="css-ycal4l"
                  >
                    <div
                      className="css-1tpmuef"
                      style={
                        Object {
                          "borderBottomColor": undefined,
                          "transform": "scale3d(0,1,1)",
                        }
                      }
                    />
                  </div>
                </Underline>
                <ErrorText
                  className={null}
                  errorText=""
                  translate={true}
                >
                  <div
                    className="css-hyvrm8"
                  >
                    <Translate
                      className=""
                      params={Object {}}
                      string=""
                    />
                  </div>
                </ErrorText>
              </div>
            </FormElement>
          </TextField>
        </div>
        <div
          className="css-p6g9oq"
          data-test-id="RegisterButton"
        >
          <RippleButton
            className="css-63oe3q"
            disabled={false}
            flat={false}
            onClick={[Function]}
            rippleClassName=""
            rippleSize={null}
            testId="Button"
            type="secondary"
            wrapContent={true}
          >
            <Button
              className="css-63oe3q"
              disabled={false}
              flat={false}
              onClick={[Function]}
              testId="Button"
              type="secondary"
              wrapContent={false}
            >
              <Button
                className="css-187rja2 css-63oe3q"
                disabled={false}
                onClick={[Function]}
                testId="Button"
              >
                <button
                  className="css-187rja2 css-63oe3q css-1rn65c0"
                  data-test-id="Button"
                  disabled={false}
                  onClick={[Function]}
                >
                  <Ripple
                    className="css-1fscwua "
                    color="#000"
                    disabled={false}
                    fill={true}
                    onClick={[Function]}
                    onComplete={[Function]}
                    overflow={false}
                    size={null}
                  >
                    <div
                      aria-hidden={true}
                      className="css-1fscwua "
                      data-test-id="Ripple"
                      onClick={[Function]}
                      style={
                        Object {
                          "overflow": "hidden",
                          "position": "relative",
                        }
                      }
                    >
                      <Translate
                        className=""
                        params={Object {}}
                        string="register.button"
                      >
                        <span
                          className=""
                        >
                          register.button
                        </span>
                      </Translate>
                    </div>
                  </Ripple>
                </button>
              </Button>
            </Button>
          </RippleButton>
        </div>
      </form>
    </Form>
  </Portal>
  <Portal
    name="user.form.after"
    props={null}
  />
</UserForm>
`;

exports[`<UserForm> should render user register form 1`] = `
<UserForm
  register={true}
  registerUser={[MockFunction]}
  updateUser={[MockFunction]}
  user={Object {}}
  validateUser={[MockFunction]}
  validationErrors={Array []}
>
  <Portal
    name="user.form.before"
    props={null}
  />
  <Portal
    name="user.form"
    props={null}
  >
    <Form
      onSubmit={[Function]}
    >
      <form
        action="#"
        onKeyPress={[Function]}
        onSubmit={[Function]}
      >
        <div
          className="css-1sbrycg"
        >
          <TextField
            className=""
            errorText=""
            label="user.firstName"
            leftElement={null}
            multiLine={false}
            name="firstName"
            onChange={[Function]}
            placeholder=""
            rightElement={null}
            type="text"
            value=""
          >
            <FormElement
              className=""
              errorText=""
              hasPlaceholder={true}
              hasUnderline={true}
              hasValue={false}
              htmlFor="firstName"
              isFocused={false}
              label="user.firstName"
              placeholder=""
              translateErrorText={true}
            >
              <div
                className="css-1vjh8yv "
              >
                <Placeholder
                  placeholder=""
                  visible={false}
                >
                  <div
                    className="css-oc0mp css-1jyyyen"
                  >
                    <Translate
                      className=""
                      params={Object {}}
                      string=""
                    />
                  </div>
                </Placeholder>
                <Label
                  hasErrorMessage={false}
                  htmlFor="firstName"
                  isFloating={false}
                  isFocused={false}
                  label="user.firstName"
                >
                  <label
                    className="css-1nn9zl4 css-1fekhao"
                    htmlFor="firstName"
                  >
                    <Translate
                      className=""
                      params={Object {}}
                      string="user.firstName"
                    >
                      <span
                        className=""
                      >
                        user.firstName
                      </span>
                    </Translate>
                  </label>
                </Label>
                <Grid
                  className=""
                  component="ul"
                  wrap={false}
                >
                  <ul
                    className=" css-h7r55a"
                  >
                    <GridItem
                      className=""
                      component="li"
                      grow={1}
                      shrink={1}
                    >
                      <li
                        className=" css-1gs0ko2"
                      >
                        <Component
                          className="css-xtw4m3"
                          multiLine={false}
                          name="firstName"
                          onChange={[Function]}
                          type="text"
                          validateOnBlur={true}
                          value=""
                        >
                          <SimpleInput
                            autoComplete={false}
                            autoCorrect={false}
                            className="css-xtw4m3"
                            disabled={false}
                            id={null}
                            isControlled={false}
                            multiLine={false}
                            name="firstName"
                            onChange={[Function]}
                            onFocusChange={[Function]}
                            onSanitize={[Function]}
                            onValidate={[Function]}
                            password={false}
                            setRef={[Function]}
                            type="text"
                            validateOnBlur={true}
                            value=""
                          >
                            <input
                              autoComplete="off"
                              autoCorrect="off"
                              className="css-xtw4m3"
                              disabled={false}
                              id={null}
                              name="firstName"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              type="text"
                              value=""
                            />
                          </SimpleInput>
                        </Component>
                      </li>
                    </GridItem>
                  </ul>
                </Grid>
                <Underline
                  hasErrorMessage={false}
                  isFocused={false}
                >
                  <div
                    className="css-ycal4l"
                  >
                    <div
                      className="css-1tpmuef"
                      style={
                        Object {
                          "borderBottomColor": undefined,
                          "transform": "scale3d(0,1,1)",
                        }
                      }
                    />
                  </div>
                </Underline>
                <ErrorText
                  className={null}
                  errorText=""
                  translate={true}
                >
                  <div
                    className="css-hyvrm8"
                  >
                    <Translate
                      className=""
                      params={Object {}}
                      string=""
                    />
                  </div>
                </ErrorText>
              </div>
            </FormElement>
          </TextField>
        </div>
        <div
          className="css-1sbrycg"
        >
          <TextField
            className=""
            errorText=""
            label="user.lastName"
            leftElement={null}
            multiLine={false}
            name="lastName"
            onChange={[Function]}
            placeholder=""
            rightElement={null}
            type="text"
            value=""
          >
            <FormElement
              className=""
              errorText=""
              hasPlaceholder={true}
              hasUnderline={true}
              hasValue={false}
              htmlFor="lastName"
              isFocused={false}
              label="user.lastName"
              placeholder=""
              translateErrorText={true}
            >
              <div
                className="css-1vjh8yv "
              >
                <Placeholder
                  placeholder=""
                  visible={false}
                >
                  <div
                    className="css-oc0mp css-1jyyyen"
                  >
                    <Translate
                      className=""
                      params={Object {}}
                      string=""
                    />
                  </div>
                </Placeholder>
                <Label
                  hasErrorMessage={false}
                  htmlFor="lastName"
                  isFloating={false}
                  isFocused={false}
                  label="user.lastName"
                >
                  <label
                    className="css-1nn9zl4 css-1fekhao"
                    htmlFor="lastName"
                  >
                    <Translate
                      className=""
                      params={Object {}}
                      string="user.lastName"
                    >
                      <span
                        className=""
                      >
                        user.lastName
                      </span>
                    </Translate>
                  </label>
                </Label>
                <Grid
                  className=""
                  component="ul"
                  wrap={false}
                >
                  <ul
                    className=" css-h7r55a"
                  >
                    <GridItem
                      className=""
                      component="li"
                      grow={1}
                      shrink={1}
                    >
                      <li
                        className=" css-1gs0ko2"
                      >
                        <Component
                          className="css-xtw4m3"
                          multiLine={false}
                          name="lastName"
                          onChange={[Function]}
                          type="text"
                          validateOnBlur={true}
                          value=""
                        >
                          <SimpleInput
                            autoComplete={false}
                            autoCorrect={false}
                            className="css-xtw4m3"
                            disabled={false}
                            id={null}
                            isControlled={false}
                            multiLine={false}
                            name="lastName"
                            onChange={[Function]}
                            onFocusChange={[Function]}
                            onSanitize={[Function]}
                            onValidate={[Function]}
                            password={false}
                            setRef={[Function]}
                            type="text"
                            validateOnBlur={true}
                            value=""
                          >
                            <input
                              autoComplete="off"
                              autoCorrect="off"
                              className="css-xtw4m3"
                              disabled={false}
                              id={null}
                              name="lastName"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              type="text"
                              value=""
                            />
                          </SimpleInput>
                        </Component>
                      </li>
                    </GridItem>
                  </ul>
                </Grid>
                <Underline
                  hasErrorMessage={false}
                  isFocused={false}
                >
                  <div
                    className="css-ycal4l"
                  >
                    <div
                      className="css-1tpmuef"
                      style={
                        Object {
                          "borderBottomColor": undefined,
                          "transform": "scale3d(0,1,1)",
                        }
                      }
                    />
                  </div>
                </Underline>
                <ErrorText
                  className={null}
                  errorText=""
                  translate={true}
                >
                  <div
                    className="css-hyvrm8"
                  >
                    <Translate
                      className=""
                      params={Object {}}
                      string=""
                    />
                  </div>
                </ErrorText>
              </div>
            </FormElement>
          </TextField>
        </div>
        <div
          className="css-1sbrycg"
        >
          <TextField
            className=""
            errorText=""
            label="user.mail"
            leftElement={null}
            multiLine={false}
            name="mail"
            onChange={[Function]}
            placeholder=""
            rightElement={null}
            type="text"
            value=""
          >
            <FormElement
              className=""
              errorText=""
              hasPlaceholder={true}
              hasUnderline={true}
              hasValue={false}
              htmlFor="mail"
              isFocused={false}
              label="user.mail"
              placeholder=""
              translateErrorText={true}
            >
              <div
                className="css-1vjh8yv "
              >
                <Placeholder
                  placeholder=""
                  visible={false}
                >
                  <div
                    className="css-oc0mp css-1jyyyen"
                  >
                    <Translate
                      className=""
                      params={Object {}}
                      string=""
                    />
                  </div>
                </Placeholder>
                <Label
                  hasErrorMessage={false}
                  htmlFor="mail"
                  isFloating={false}
                  isFocused={false}
                  label="user.mail"
                >
                  <label
                    className="css-1nn9zl4 css-1fekhao"
                    htmlFor="mail"
                  >
                    <Translate
                      className=""
                      params={Object {}}
                      string="user.mail"
                    >
                      <span
                        className=""
                      >
                        user.mail
                      </span>
                    </Translate>
                  </label>
                </Label>
                <Grid
                  className=""
                  component="ul"
                  wrap={false}
                >
                  <ul
                    className=" css-h7r55a"
                  >
                    <GridItem
                      className=""
                      component="li"
                      grow={1}
                      shrink={1}
                    >
                      <li
                        className=" css-1gs0ko2"
                      >
                        <Component
                          className="css-xtw4m3"
                          multiLine={false}
                          name="mail"
                          onChange={[Function]}
                          type="text"
                          validateOnBlur={true}
                          value=""
                        >
                          <SimpleInput
                            autoComplete={false}
                            autoCorrect={false}
                            className="css-xtw4m3"
                            disabled={false}
                            id={null}
                            isControlled={false}
                            multiLine={false}
                            name="mail"
                            onChange={[Function]}
                            onFocusChange={[Function]}
                            onSanitize={[Function]}
                            onValidate={[Function]}
                            password={false}
                            setRef={[Function]}
                            type="text"
                            validateOnBlur={true}
                            value=""
                          >
                            <input
                              autoComplete="off"
                              autoCorrect="off"
                              className="css-xtw4m3"
                              disabled={false}
                              id={null}
                              name="mail"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              type="text"
                              value=""
                            />
                          </SimpleInput>
                        </Component>
                      </li>
                    </GridItem>
                  </ul>
                </Grid>
                <Underline
                  hasErrorMessage={false}
                  isFocused={false}
                >
                  <div
                    className="css-ycal4l"
                  >
                    <div
                      className="css-1tpmuef"
                      style={
                        Object {
                          "borderBottomColor": undefined,
                          "transform": "scale3d(0,1,1)",
                        }
                      }
                    />
                  </div>
                </Underline>
                <ErrorText
                  className={null}
                  errorText=""
                  translate={true}
                >
                  <div
                    className="css-hyvrm8"
                  >
                    <Translate
                      className=""
                      params={Object {}}
                      string=""
                    />
                  </div>
                </ErrorText>
              </div>
            </FormElement>
          </TextField>
        </div>
        <div
          className="css-1sbrycg"
        >
          <TextField
            className=""
            errorText=""
            label="user.password"
            leftElement={null}
            multiLine={false}
            name="password"
            onChange={[Function]}
            placeholder=""
            rightElement={null}
            type="password"
            value=""
          >
            <FormElement
              className=""
              errorText=""
              hasPlaceholder={true}
              hasUnderline={true}
              hasValue={false}
              htmlFor="password"
              isFocused={false}
              label="user.password"
              placeholder=""
              translateErrorText={true}
            >
              <div
                className="css-1vjh8yv "
              >
                <Placeholder
                  placeholder=""
                  visible={false}
                >
                  <div
                    className="css-oc0mp css-1jyyyen"
                  >
                    <Translate
                      className=""
                      params={Object {}}
                      string=""
                    />
                  </div>
                </Placeholder>
                <Label
                  hasErrorMessage={false}
                  htmlFor="password"
                  isFloating={false}
                  isFocused={false}
                  label="user.password"
                >
                  <label
                    className="css-1nn9zl4 css-1fekhao"
                    htmlFor="password"
                  >
                    <Translate
                      className=""
                      params={Object {}}
                      string="user.password"
                    >
                      <span
                        className=""
                      >
                        user.password
                      </span>
                    </Translate>
                  </label>
                </Label>
                <Grid
                  className=""
                  component="ul"
                  wrap={false}
                >
                  <ul
                    className=" css-h7r55a"
                  >
                    <GridItem
                      className=""
                      component="li"
                      grow={1}
                      shrink={1}
                    >
                      <li
                        className=" css-1gs0ko2"
                      >
                        <Component
                          className="css-xtw4m3"
                          multiLine={false}
                          name="password"
                          onChange={[Function]}
                          type="password"
                          validateOnBlur={true}
                          value=""
                        >
                          <SimpleInput
                            autoComplete={false}
                            autoCorrect={false}
                            className="css-xtw4m3"
                            disabled={false}
                            id={null}
                            isControlled={false}
                            multiLine={false}
                            name="password"
                            onChange={[Function]}
                            onFocusChange={[Function]}
                            onSanitize={[Function]}
                            onValidate={[Function]}
                            password={false}
                            setRef={[Function]}
                            type="password"
                            validateOnBlur={true}
                            value=""
                          >
                            <input
                              autoComplete="off"
                              autoCorrect="off"
                              className="css-xtw4m3"
                              disabled={false}
                              id={null}
                              name="password"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              type="password"
                              value=""
                            />
                          </SimpleInput>
                        </Component>
                      </li>
                    </GridItem>
                  </ul>
                </Grid>
                <Underline
                  hasErrorMessage={false}
                  isFocused={false}
                >
                  <div
                    className="css-ycal4l"
                  >
                    <div
                      className="css-1tpmuef"
                      style={
                        Object {
                          "borderBottomColor": undefined,
                          "transform": "scale3d(0,1,1)",
                        }
                      }
                    />
                  </div>
                </Underline>
                <ErrorText
                  className={null}
                  errorText=""
                  translate={true}
                >
                  <div
                    className="css-hyvrm8"
                  >
                    <Translate
                      className=""
                      params={Object {}}
                      string=""
                    />
                  </div>
                </ErrorText>
              </div>
            </FormElement>
          </TextField>
        </div>
        <div
          className="css-p6g9oq"
          data-test-id="RegisterButton"
        >
          <RippleButton
            className="css-63oe3q"
            disabled={false}
            flat={false}
            onClick={[Function]}
            rippleClassName=""
            rippleSize={null}
            testId="Button"
            type="secondary"
            wrapContent={true}
          >
            <Button
              className="css-63oe3q"
              disabled={false}
              flat={false}
              onClick={[Function]}
              testId="Button"
              type="secondary"
              wrapContent={false}
            >
              <Button
                className="css-187rja2 css-63oe3q"
                disabled={false}
                onClick={[Function]}
                testId="Button"
              >
                <button
                  className="css-187rja2 css-63oe3q css-1rn65c0"
                  data-test-id="Button"
                  disabled={false}
                  onClick={[Function]}
                >
                  <Ripple
                    className="css-1fscwua "
                    color="#000"
                    disabled={false}
                    fill={true}
                    onClick={[Function]}
                    onComplete={[Function]}
                    overflow={false}
                    size={null}
                  >
                    <div
                      aria-hidden={true}
                      className="css-1fscwua "
                      data-test-id="Ripple"
                      onClick={[Function]}
                      style={
                        Object {
                          "overflow": "hidden",
                          "position": "relative",
                        }
                      }
                    >
                      <Translate
                        className=""
                        params={Object {}}
                        string="register.button"
                      >
                        <span
                          className=""
                        >
                          register.button
                        </span>
                      </Translate>
                    </div>
                  </Ripple>
                </button>
              </Button>
            </Button>
          </RippleButton>
        </div>
      </form>
    </Form>
  </Portal>
  <Portal
    name="user.form.after"
    props={null}
  />
</UserForm>
`;
